terraform-eks-cluster/hello-world-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    name: hello-world
